# r2d2_ros2

./: .gitignore  README.md
.devcontainer/: Dockerfile
my_r2d2_hardware/: CMakeLists.txt  my_r2d2_hardware.xml  package.xml
my_r2d2_hardware/include/my_r2d2_hardware/: my_r2d2_hardware.hpp  visibility_control.h
my_r2d2_hardware/src/: my_r2d2_hardware.cpp
r2d2_control/: CMakeLists.txt  README.md  package.xml
r2d2_control/config/: diff_drive_controller.yaml  diff_drive_controller_for_gazebo.yaml  r2d2_ros_control.rviz
r2d2_control/extra/: load_controller.py
r2d2_control/launch/: r2d2_control1.launch.py  r2d2_control1_xacro_to_sdf.launch.py  r2d2_control3.launch.py  r2d2_control4.launch.py  r2d2_control5.launch.py  r2d2_control6.launch.py
r2d2_control/urdf/: r2d2_gazebo_ros2_control.urdf.xacro  r2d2_no_plugin.urdf  r2d2_no_plugin.urdf.xacro  r2d2_ros2_control.urdf.xacro  r2d2_ros2_control_with_my_r2d2_hardware.urdf.xacro  r2d2_ros_control.urdf.xacro  utils_gazebo_ros2_control.urdf.xacro  utils_no_plugin.urdf.xacro  utils_ros2_control.urdf.xacro  utils_ros2_control_with_diffbotsytem.urdf.xacro  utils_ros2_control_with_my_r2d2_hardware.urdf.xacro
r2d2_my_hardware/: CMakeLists.txt
src/gazebo_r2d2/: CMakeLists.txt  README.md  package.xml
src/gazebo_r2d2/config/: diff_drive_controller.yaml  r2d2.rviz
src/gazebo_r2d2/launch/: r2d2_bringup.launch.py  r2d2_with_empty_world.launch.py  r2d2_with_empty_world1.launch.py  r2d2_with_empty_world2.launch.py  r2d2_with_empty_world3.launch.py  r2d2_with_empty_world4.launch.py  r2d2_with_empty_world5.launch.py  robot_state_publisher.launch.py
src/gazebo_r2d2/urdf/: r2d2.urdf.xacro  r2d2_ros2_control.urdf.xacro  r2d2_ros2_control_in_gazebo.urdf.xacro  r2d2_ros2_control_with_my_plugin.urdf.xacro  utils.urdf.xacro  utils_ros2_control.urdf.xacro  utils_ros2_control_in_gazebo.urdf.xacro  utils_ros2_control_with_my_plugin.urdf.xacro
src/my_teleop_twist_keyboard/: my_teleop_twist_keyboard.py  package.xml  setup.cfg  setup.py
src/r2d2_control/: README.md  package.xml
src/r2d2_control/config/: r2d2_ros2_control.rviz
src/r2d2_control/launch/: r2d2_control1.launch.py  r2d2_control2.launch.py  r2d2_control3.launch.py  robot_state_publisher_for_r2d2_control_1_and_2.launch.py
src/r2d2_control/urdf/: r2d2.urdf.xacro  r2d2_ros2_control.urdf.xacro  (+4 more)
src/r2d2_my_hardware/: package.xml
src/urdf_tutorial/: README.md  package.xml  setup.py
teleop_twiststampled_keyboard/: package.xml  setup.cfg  setup.py  teleop_twiststamped_keyboard.py
(+2 files in other folders)
